--- a/reactTraining/src/components/assignmentThree/buildControls/BuildControls.scss
+++ b/reactTraining/src/components/assignmentThree/buildControls/BuildControls.scss
@@ -2,6 +2,6 @@
     width: 100%;
     display: flex;
     align-items: center;
-    background: #f1f1f1;
-    padding: 10px 0;
+    padding: 20px 0;
+    border-top: solid 1px #f1f1f1;
 }
