--- a/reactTraining/src/components/assignmentThree/burgerIngredient/BurgerIngredient.scss
+++ b/reactTraining/src/components/assignmentThree/burgerIngredient/BurgerIngredient.scss
@@ -1,108 +1,47 @@
+.ingredient {
+  position: relative;
+}
 .BreadBottom {
-    height: 13%;
-    width: 80%;
-    background: linear-gradient(#F08E4A, #e27b36);
-    border-radius: 0 0 30px 30px;
-    box-shadow: inset -15px 0 #c15711;
-    margin: 2% auto;
+  z-index: 0;
 }
-
 .BreadTop {
-    height: 15%;
-    width: 80%;
-    background: linear-gradient(#bc581e, #e27b36);
-    border-radius: 30px 30px 0 0;
-    margin: 2% auto;
-    position: relative;
+  margin-bottom: -60px;
+  z-index: 8;
 }
-
-.Seeds1 {
-  width: 20px;
-  height: 5px;
-    position: absolute;
-    background-color: tan;
-    left: 30%;
-    top: 50%;
-    border-radius: 40%;
-    transform: rotate(-10deg);
-}
-
-.Seeds1:after {
-    content: "";
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    background-color: tan;
-    left: -170%;
-    top: -260%;
-    border-radius: 40%;
-    transform: rotate(60deg);
-  }
-  
-.Seeds1:before {
-    content: "";
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    background-color: tan;
-    left: 180%;
-    top: -50%;
-    border-radius: 40%;
-    transform: rotate(60deg);
-  }
-
-  .Seeds2 {
-    width: 20px;
-    height: 5px;
-    position: absolute;
-    background-color: tan;
-    left: 60%;
-    top: 40%;
-    border-radius: 40%;
-    transform: rotate(10deg);
-  }
-  
-  .Seeds2:before {
-    content: "";
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    background-color: tan;
-    left: 150%;
-    top: -130%;
-    border-radius: 40%;
-    transform: rotate(90deg);
-  }
-  
-
 .Meat {
-    width: 80%;
-    height: 10%;
-    background: linear-gradient(#7f3608, #702e05);
-    margin: 2% auto;
-    border-radius: 10px;
+  z-index: 2;
+  margin-bottom: -40px;
 }
-
+.Meat:nth-child(2) {
+  z-index: 3;
+  margin-bottom: -40px;
+}
 .Cheese {
-    width: 85%;
-    height: 10px;
-    margin: 2% auto;
-    background: #f4d004;
-    border-radius: 10px;
+  margin-bottom: -80px;
+  z-index: 3;
 }
-
+.Tomatos {
+  margin-bottom: -50px;
+  z-index: 4;
+}
+.Pickles {
+  margin-bottom: -50px;
+  z-index: 5;
+  margin-left: 90px;
+  margin-top: -70px;
+}
+.Pickles:nth-child(2n) {
+  z-index: 5;
+  margin-left: -90px;
+}
+.Pickles:last-child {
+  margin-top: 0;
+}
+.Onions {
+  margin-bottom: -50px;
+  z-index: 6;
+}
 .Lettuce {
-    width: 80%;
-    height: 10px;
-    margin: 2% auto;
-    background: lightgreen;
-    border-radius: 20px;
-}
-
-.Bacon {
-    width: 85%;
-    height: 3%;
-    background: linear-gradient(#bf3813, #c45e38);
-    margin: 2% auto;
-    border-radius: 10px;
+  margin-bottom: -60px;
+  z-index: 7;
 }
