--- a/reactTraining/src/components/assignmentThree/buildControls/BuildControls.scss
+++ b/reactTraining/src/components/assignmentThree/buildControls/BuildControls.scss
@@ -3,5 +3,11 @@
     display: flex;
     align-items: center;
     padding: 20px 0;
+    background: rgba(255,255,255,0.7);
     border-top: solid 1px #f1f1f1;
+    -webkit-backdrop-filter: blur(10px);
+    backdrop-filter: blur(10px);
+    position: fixed;
+    bottom: 0;
+    left: 0;
 }
