--- a/reactTraining/src/components/assignmentThree/buildControls/buildControl/BuildControl.scss
+++ b/reactTraining/src/components/assignmentThree/buildControls/buildControl/BuildControl.scss
@@ -10,11 +10,12 @@
     font-size: 24px;
     margin: 0 0 5px;
   }
-  .btn {
+  .less,.more {
     display: inline-block;
     padding: 15px;
     margin: 0 5px;
     background: #555;
+    color: white;
     border: none;
     cursor: pointer;
     transition: 0.3s;
