Add New Comment Capabilities & Delete Comment Method, New State Item React Code Snippet

--- a/reactTraining/src/components/assignmentFour/components/comment/Comment.scss
+++ b/reactTraining/src/components/assignmentFour/components/comment/Comment.scss
@@ -15,4 +15,11 @@
     &:nth-child(n+5) {
         margin-top: 70px;
     }
+    button {
+        background: #2AFD94;
+        color: white;
+        &:hover {
+            background: #1dbb6c;
+        }
+    }
 }
