Added 404 page and Lazy Loading for each assignmennt

--- a/reactTraining/src/components/app/App.scss
+++ b/reactTraining/src/components/app/App.scss
@@ -9,7 +9,7 @@
   }
   .page-content {
     padding: 0 35px;
-    margin: 0 auto 200px;
+    margin: 0 auto;
   }
   p {
     line-height: 150%;
@@ -37,10 +37,10 @@
       }
     }
     &.cta {
-      background: #2AFD94;
+      background: lightgreen;
       color: white;
       &:hover {
-        background: #1dbb6c;
+        background: mediumseagreen;
       }
     }
     &.link {
