Add routing to checkout page after order confirmation, Toolbar styling update, Routing update to switch between Burger Builder sub pages

--- a/reactTraining/src/components/assignmentThree/Layout/toolbar/Toolbar.scss
+++ b/reactTraining/src/components/assignmentThree/Layout/toolbar/Toolbar.scss
@@ -15,8 +15,8 @@
         }
     }
     .Logo {
-        width: 10%;
-        text-align: center;
+        width: 50%;
+        text-align: left;
         float: left;
     }
 }
