--- a/reactTraining/src/components/assignmentThree/Layout/sidedrawer/Sidedrawer.scss
+++ b/reactTraining/src/components/assignmentThree/Layout/sidedrawer/Sidedrawer.scss
@@ -17,6 +17,13 @@
         width: 100%;
         border-bottom: solid #f1f1f1 1px;
         padding: 50px 0;
+        text-align: center;
+        h1 {
+            line-height: 50px;
+        }
+        img {
+            height: 70px;
+        }
     }
     .BurgerNavItems {
         display: block;
